Add workspace repository ID and improve workspace management functionality